add : Added native module for upi app scanning

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,4 +24,17 @@
         </intent-filter>
       </activity>
     </application>
+
+
+  <queries>
+    <package android:name="com.phonepe.app" /> 
+    <package android:name="com.google.android.apps.nbu.paisa.user" /> 
+    <package android:name="net.one97.paytm" />
+    <package android:name="in.org.npci.upiapp" /> 
+    <package android:name="in.amazon.mShop.android.shopping" /> 
+    <package android:name="com.upi.axispay" /> 
+    <package android:name="com.dreamplug.androidapp" /> <!-- cred <-->
+    <package android:name="com.csam.icici.bank.imobile" /> <!-- icici -->
+    <package android:name="com.myairtelapp" /> <!-- my airtel -->
+  </queries>
 </manifest>
